themes/foodiepro-2.1.8/style.css
/* ... */
#popmake-10319 .mashsb-count,
#popmake-10319 .mashsb_above_buttons,
#popmake-10319 .mashsb_below_buttons,
#popmake-10195 .mashsb-count,
#popmake-10195 .mashsb_above_buttons,
#popmake-10195 .mashsb_below_buttons {
	display:none
}

/* Home Page
--------------------------------------------- */

.home-top {
	margin: 20px 0 0 0;
	max-width:680px;
}

.home-bottom {
	float:left;
	width:100%;
	margin-top:20px;
}

.paged .home-middle,
.paged .home-top {
	display:none;
	visibility:hidden;
}

.home-bottom .widgettitle {
	margin:0 0 20px;
	padding:0 0 10px;
}

.home-bottom .entry-title {
	font-size:20px;
}

.home .one-third .entry-title,
.home .one-fourth .entry-title,
.home .one-sixth .entry-title {
	font-size:16px;
	text-align:center;
}

/*.home .widget {
	margin-bottom:20px;
}*/


/* Single Entries
----------------------------------------------*/

/*.single .entry-avatar {
    display: inline-block;
    vertical-align: middle;
}*/

.single h1.entry-title {
    /*display: inline-block;
    vertical-align: middle;*/
  padding-top: 0;
  margin-top: 0;
}

.single .entry-header {
  padding-bottom: 40px;
}

/* Mon Goûtu pages
--------------------------------------------- */

.page-header-wrap {
	display:inline;
}

.page-header-img {
	margin:0px 20px 0px 0px;
	float:left;
	height:300px;
}



/* Pages with entry header image
--------------------------------------------- */

.entry-header-image {
	box-sizing:border-box;
	/*height:80px;*/
	float:left;
	margin-right:15px;
	margin-bottom:20px;
	width:100px;
}

.entry-header-overlay {
	position:relative;
}

.entry-header-overlay .overlay {
  position: absolute;
  border-radius: 8px;
  padding: 5px 10px;
  background: rgba(78, 76, 76, 0.43);
  color: white;
}

.overlay.col-0 {
	color: #2fe803;
	background: #f1ff2e;
}

.overlay.col-1 {
	color: #e8ff36;
	background: #ff1900;
}

.overlay.col-2 {
  color: #d06b20;
  background: #ffde35;
}

.overlay.col-3 {
  color: #ffffff;
  background: #a1ffd4;
}

.overlay#fest::before {
	content:url("images/christmas-stars-24.png");
	padding-right:5px;
  left: 10px;
  top: 10px;	
}

.overlay.left0 {
  left: 10px;
  top: 10px;	
}

.overlay.left1 {
  left: 10px;
  top: 45px;	
}

.overlay.topright0 {
  right: 10px;
  top: 10px;	
}

.overlay.topright1 {
  right: 10px;
  top: 45px;	
}

.overlay.botright0 {
  right: 10px;
  bottom: 20px;	
}


.entry-content {
	text-align: justify;	
	clear:both;
}


/* Before Content section
--------------------------------------------- */

.top.before-content.widget-area {
    padding: 0;
    margin: 0;
}

.before-content .widget {
	width:100%;
	margin:0;
}	

.before-content .widget ul li {
  float: left;
  margin: 10px 15px;
  width:40%;
}

.before-content .widget ul li a {
  display:block;
}

.before-content {
	display:none;
}

.before-content .widget.bubbles ul li.current-menu-item a, 
.before-content .widget.bubbles ul li:hover a {
    font-size: initial;
}



/* Recipes, Blog & Archive Pages
--------------------------------------------- */


/* Top section commons */

.top, .bottom {
	float:left;
	padding:10px;
	margin-top:0; /* P.O. Original none */
	width:100%;
	margin-bottom:40px;
}

.bottom {
	margin-top:40px; 
}

.top .widget ul,
.bottom .widget ul {
	list-style-type:none;
}

.archives-top .textwidget ul li,
.archives-top .dropdown-select {
	width:100%;
	text-align:center;
	height:40px;
}

/* Recipes & Blogs Top section */
/* Archive pages Top section */
.recipes-top .widget,
.blogs-top .widget,
.archives-top .widget {
	width:33.3%;
	padding:0px 10px;
	max-width: 215px;	
	float:left;
}


/* Archives bottom section */
.archives-bottom .widget  {
	width:50%;
	padding:0px 10px;
	max-width: 300px;	
	float:left;
}

.archives-top .widget-wrap  {
	width:100%;
	margin-top:auto;
	margin-bottom:auto;
}

/* Themes widget on archive, blogs & recipes top 
----------------------------------------------------*/

.recipes-top .widget.themes ul li, 
.blogs-top .widget.themes ul li {
  float:left;
	width:45%;
  margin:5px;
}

.recipes-top .widget.themes ul li.current-menu-item > a,
.blogs-top .widget.themes ul li.current-menu-item > a {
	color:#444;
}

.recipes-top .widget_text.themes, 
.blogs-top .widget_text.themes {
	margin-bottom:0;
	padding-left:10px;
	padding-top:8px;
}


/* Recipes & Blogs Bottom section */

.recipes-bottom .widget.intro, 
.blogs-bottom .widget.intro {
	/*border-top:1px dashed #aaa;*/
	border-width:0;
	padding:0px;
}

.recipes-bottom .intro .widgettitle, 
.blogs-bottom .intro .widgettitle {
	font-size:28px;
	text-align:left;
	margin-bottom:0px;
}

.recipes-bottom .intro .widgettitle:first-letter, 
.blogs-bottom .intro .widgettitle:first-letter {
	font-size:150%;
}

.recipes-bottom .intro .textwidget, 
.blogs-bottom .intro .textwidget {
	/*text-align:center;*/
	margin-bottom:10px;
}

.recipes-bottom .widget, 
.blogs-bottom .widget {
	/*border-top:1px dotted #333;*/ 
	clear:both;
	display:block;
	overflow:hidden;
	/*padding:20px 0*/;
}

.recipes-bottom section:nth-of-type(2),
.blogs-bottom section:nth-of-type(2) {
	padding-top:0;
	border-top:0px;
}

.recipes-bottom .featuredpost h2,
.blogs-bottom .featuredpost h2,
.archive .one-third .entry-title,
.archive .one-fourth .entry-title,
.archive .one-sixth .entry-title,
.search .one-third .entry-title,
.search .one-fourth .entry-title,
.search .one-sixth .entry-title,
.page-template-page_blog .one-third .entry-title,
.page-template-page_blog .one-fourth .entry-title,
.page-template-page_blog .one-sixth .entry-title{
	font-size:13px;
	font-weight:400;
	text-transform:none;
	text-align:center;/*P.O. originzal none */
}



/*
Top Ad
---------------------------------------------------------------------------------------------------- */

.before-header {
	background:#f5f5f5;
	clear:both;
	overflow:hidden;
	padding:10px 0;
	text-align:center;
}

.before-header img,
.before-header iframe {
	display:block;
	margin:0 auto;
}

.before-header .widget {
	margin:0 auto;
	max-width:1100px;
}
/* ... */

